--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,12 +13,12 @@ body.light-theme, :root {
 
 body.dark-theme {
   /* dark theme colors */
-  --background: #292a2d;
-  --background-secondary: #3b3d42;
-  --header: #252627;
-  --color: #a9a9b3;
-  --color-secondary: #73747b;
-  --border-color: #4a4b50; }
+  --background: #2f2f2f;
+  --background-secondary: #282828;
+  --header: #282828;
+  --color: #b0b0b0;
+  --color-secondary: #7c7c7c;
+  --border-color: #4f4f4f; }
 
 @media (prefers-color-scheme: light) {
   body:not(.dark-theme) {
