--- a/static/style.css
+++ b/static/style.css
@@ -4,3 +4,17 @@ blockquote, p, ul {
 	text-align: justify;
 	hyphens: auto;
 }
+
+pre {
+	background-color: var(--background-secondary);
+}
+
+code {
+	font-size: 0.9em;
+}
+
+.header {
+	position: sticky;
+	top: 0;
+	z-index: 999;
+}
