--- a/static/style.css
+++ b/static/style.css
@@ -7,6 +7,11 @@ blockquote, p, ul, .post-content {
 
 pre {
 	background-color: var(--background-secondary);
+	overflow: auto;
+}
+
+.line {
+	white-space: pre;
 }
 
 code, kbd {
