--- a/layouts/shortcodes/social-icons.html
+++ b/layouts/shortcodes/social-icons.html
@@ -1,6 +1,7 @@
-{{- with $.Site.Params.social }}
-	<div style="text-align: center; padding: 14px 0">
-        {{ partial "social-icons.html" . }}
+<div {{ with .Get "style" }} style="{{ . | safeCSS }}" {{ end }}>
+  {{- with $.Site.Params.social }}
+    <div style="text-align: center;">
+      {{ partial "social-icons.html" . }}
     </div>
-{{- end }}
-
+  {{- end }}
+</div>
