--- a/public/style.css
+++ b/public/style.css
@@ -54,6 +54,15 @@ h2 {
 	text-decoration: underline;
 }
 
+h1:before, h2:before, h3:before, h4:before, h5:before, h6:before {
+	content: '';
+	display: block;
+	position: relative;
+	width: 0;
+	height: 96px;
+	margin-top: -96px;
+}
+
 .logo__cursor {
 	margin-left: 6px;
 	width: 8px;
