--- a/layouts/partials/social-icons.html
+++ b/layouts/partials/social-icons.html
@@ -1,3 +1,3 @@
 {{ range . -}}
-    &nbsp; <a href="{{ .url }}" target="_blank" rel="me noopener {{ .rel }}" title="{{ .name | humanize }}">{{ partial "svg.html" . }}</a> &nbsp &nbsp;
+    &nbsp; <a href="{{ .url }}" rel="me noopener {{ .rel }}" title="{{ .name | humanize }}">{{ partial "svg.html" . }}</a> &nbsp &nbsp;
 {{- end -}}
