--- a/layouts/partials/katex.html
+++ b/layouts/partials/katex.html
@@ -12,7 +12,7 @@
         renderMathInElement(document.body, {
             delimiters: [
                 {left: "$$", right: "$$", display: true},
-				{left: "\\[", right: "\\]", display: true},
+				{left: "\[", right: "\]", display: true},
                 {left: "$", right: "$", display: false}
             ]
         });
