Add CNN repository

--- a/assets/css/repository.scss
+++ b/assets/css/repository.scss
@@ -30,6 +30,9 @@
 .repo-name {
   margin: 0;
   text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .repo-desc {
