--- a/public/css/style.css
+++ b/public/css/style.css
@@ -930,7 +930,10 @@ h4:hover a {
 
 .repo-name {
   margin: 0;
-  text-align: left; }
+  text-align: left;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
 
 .repo-desc {
   margin: 0.15rem 0 0;
