Use system theme by default

--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,8 +1,8 @@
 body.light-theme, :root {
   /* light theme color */
   --background: #fff;
-  --background-secondary: #eaeaea;
-  --header: #fafafa;
+  --background-secondary: #f0f0f0;
+  --header: #f0f0f0;
   --color: #222;
   --color-secondary: #999;
   --border-color: #dcdcdc;
@@ -26,8 +26,8 @@ body.dark-theme {
   body:not(.dark-theme) {
     /* light theme color */
     --background: #fff;
-    --background-secondary: #eaeaea;
-    --header: #fafafa;
+    --background-secondary: #f0f0f0;
+    --header: #f0f0f0;
     --color: #222;
     --color-secondary: #999;
     --border-color: #dcdcdc;
